# DPMJET

./: CMakeLists.txt
common/: oauxfi.f
include/dpmjet/inc/: dtglcp
include/phojet/inc/: poevt1
src/dpmjet/: DPMINI.f  DPMRUN.f  DT_EVA2HE.f  DT_FICONF.f  DT_HISTAT.f  DT_INIT.f  DT_INITJS.f  DT_KKEVNT.f  DT_RESNCL.f  DT_SWPFSP.f  openfile.f
src/phojet/: PHO_FITPAR.f  PHO_PARTON.f  PHO_SETCT14.f
