# **************************************************************************
# * Copyright(c) 1998-2016, ALICE Experiment at CERN, All rights reserved. *
# *                                                                        *
# * Author: The ALICE Off-line Project.                                    *
# * Contributors are mentioned in the code where appropriate.              *
# *                                                                        *
# * Permission to use, copy, modify and distribute this software and its   *
# * documentation strictly for non-commercial purposes is hereby granted   *
# * without fee, provided that the above copyright notice appears in all   *
# * copies and that both the copyright notice and this permission notice   *
# * appear in the supporting documentation. The authors make no claims     *
# * about the suitability of this software for any purpose. It is          *
# * provided "as is" without express or implied warranty.                  *
# **************************************************************************

cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)

project(DPMJET)
enable_language(Fortran)
set(CMAKE_Fortran_PREPROCESS ON)

# Set by default DEBUG build type
# The optimisation affects the initialisation of COMMON blocks
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE DEBUG)
endif(NOT CMAKE_BUILD_TYPE)

# ``MACOSX_RPATH`` is enabled by default.
cmake_policy(SET CMP0042 NEW)

# PHOJET sources
set(PHOJET_SRCS
src/phojet/IPHO_ANTI.f
src/phojet/IPHO_BAR3.f
src/phojet/IPHO_CHR3.f
src/phojet/IPHO_CNV1.f
src/phojet/IPHO_DIQU.f
src/phojet/IPHO_FINDIDX.f
src/phojet/IPHO_ID2PDG.f
src/phojet/IPHO_ISMAPPED.f
src/phojet/IPHO_LU2PDG.f
src/phojet/IPHO_PDG2ID.f
src/phojet/IPHO_PDG2LU.f
src/phojet/PHO_ABORT.f
src/phojet/PHO_ACTPDF.f
src/phojet/PHO_ALLM97.f
src/phojet/PHO_ALPHAE.f
src/phojet/PHO_ALPHAS.f
src/phojet/PHO_ALTRA.f
src/phojet/PHO_BAMASS.f
src/phojet/PHO_BESSI0.f
src/phojet/PHO_BESSI1.f
src/phojet/PHO_BESSJ0.f
src/phojet/PHO_BESSK0.f
src/phojet/PHO_BESSK1.f
src/phojet/PHO_BETAF.f
src/phojet/PHO_BORNCS.f
src/phojet/PHO_CASCMOD.f
src/phojet/PHO_CDIFF.f
src/phojet/PHO_CHAN2A.f
src/phojet/PHO_CHECK.f
src/phojet/PHO_CKMTFV.f
src/phojet/PHO_CKMTPA.f
src/phojet/PHO_CKMTPD.f
src/phojet/PHO_CKMTPO.f
src/phojet/PHO_CONN0.f
src/phojet/PHO_CONN1.f
src/phojet/PHO_CPCINI.f
src/phojet/PHO_CSDIFF.f
src/phojet/PHO_CSINT.f
src/phojet/PHO_CT14ALPHAS.f
src/phojet/PHO_CT14GETPARS.f
src/phojet/PHO_CT14MASS.f
src/phojet/PHO_CT14PDF.f
src/phojet/PHO_DATINI.f
src/phojet/PHO_DBFINT.f
src/phojet/PHO_DFMASS.f
src/phojet/PHO_DFWRAP.f
src/phojet/PHO_DIFDIS.f
src/phojet/PHO_DIFKIN.f
src/phojet/PHO_DIFPAR.f
src/phojet/PHO_DIFPRO.f
src/phojet/PHO_DIFRES.f
src/phojet/PHO_DIFSLP.f
src/phojet/PHO_DOR92FS.f
src/phojet/PHO_DOR92FV.f
src/phojet/PHO_DOR92FW.f
src/phojet/PHO_DOR92HO.f
src/phojet/PHO_DOR92LO.f
src/phojet/PHO_DOR94DI.f
src/phojet/PHO_DOR94FS.f
src/phojet/PHO_DOR94FV.f
src/phojet/PHO_DOR94FW.f
src/phojet/PHO_DOR94HO.f
src/phojet/PHO_DOR94LO.f
src/phojet/PHO_DOR98LO.f
src/phojet/PHO_DOR98SC.f
src/phojet/PHO_DORFGP.f
src/phojet/PHO_DORFQP.f
src/phojet/PHO_DORFVP.f
src/phojet/PHO_DORGF.f
src/phojet/PHO_DORGFS.f
src/phojet/PHO_DORGH0.f
src/phojet/PHO_DORGHO.f
src/phojet/PHO_DORGLO.f
src/phojet/PHO_DORGLV.f
src/phojet/PHO_DORPHO.f
src/phojet/PHO_DORPLO.f
src/phojet/PHO_DQMASS.f
src/phojet/PHO_DSIGDM.f
src/phojet/PHO_DSIGDT.f
src/phojet/PHO_DZEROX.f
src/phojet/PHO_EIKON.f
src/phojet/PHO_EVEINI.f
src/phojet/PHO_EVENT.f
src/phojet/PHO_EXPBESSI0.f
src/phojet/PHO_EXPINT.f
src/phojet/PHO_FITPAR.f
src/phojet/PHO_FIXCOL.f
src/phojet/PHO_FIXLAB.f
src/phojet/PHO_FLAUX.f
src/phojet/PHO_FRAINI.f
src/phojet/PHO_GAUDAT.f
src/phojet/PHO_GAUSET.f
src/phojet/PHO_GET4VECTORS.f
src/phojet/PHO_GETLTR.f
src/phojet/PHO_GETPDF.f
src/phojet/PHO_GGBEAM.f
src/phojet/PHO_GGBLSR.f
src/phojet/PHO_GGEPEM.f
src/phojet/PHO_GGFAUX.f
src/phojet/PHO_GGFLCL.f
src/phojet/PHO_GGFLCR.f
src/phojet/PHO_GGFNUC.f
src/phojet/PHO_GGHIOF.f
src/phojet/PHO_GGHIOG.f
src/phojet/PHO_GHHIAS.f
src/phojet/PHO_GHHIOF.f
src/phojet/PHO_GLU2QU.f
src/phojet/PHO_GLUSPL.f
src/phojet/PHO_GPHERA.f
src/phojet/PHO_GRSCALC.f
src/phojet/PHO_GRSF1.f
src/phojet/PHO_GRSF2.f
src/phojet/PHO_HACODE.f
src/phojet/PHO_HADCSL.f
src/phojet/PHO_HADSP2.f
src/phojet/PHO_HADSP3.f
src/phojet/PHO_HARCOL.f
src/phojet/PHO_HARCOR.f
src/phojet/PHO_HARDIR.f
src/phojet/PHO_HARDX1.f
src/phojet/PHO_HARFAC.f
src/phojet/PHO_HARINI.f
src/phojet/PHO_HARINT.f
src/phojet/PHO_HARISR.f
src/phojet/PHO_HARKIN.f
src/phojet/PHO_HARMCI.f
src/phojet/PHO_HARREM.f
src/phojet/PHO_HARSCA.f
src/phojet/PHO_HARWGH.f
src/phojet/PHO_HARWGI.f
src/phojet/PHO_HARWGX.f
src/phojet/PHO_HARX12.f
src/phojet/PHO_HARXD2.f
src/phojet/PHO_HARXPT.f
src/phojet/PHO_HARXR2.f
src/phojet/PHO_HARXR3.f
src/phojet/PHO_HARXTO.f
src/phojet/PHO_HARZSP.f
src/phojet/PHO_ID2STR.f
src/phojet/PHO_IMPAMP.f
src/phojet/PHO_INIT.f
src/phojet/PHO_INITPMAP.f
src/phojet/PHO_LOOREG.f
src/phojet/PHO_LTRANS.f
src/phojet/PHO_LTRHEP.f
src/phojet/PHO_MASCOR.f
src/phojet/PHO_MASSAD.f
src/phojet/PHO_MCHECK.f
src/phojet/PHO_MCINI.f
src/phojet/PHO_MEMASS.f
src/phojet/PHO_MKSLTR.f
src/phojet/PHO_MSHELL.f
src/phojet/PHO_PARCOR.f
src/phojet/PHO_PARDAT.f
src/phojet/PHO_PARREM.f
src/phojet/PHO_PARTON.f
src/phojet/PHO_PARTONX12.f
src/phojet/PHO_PARTPT.f
src/phojet/PHO_PDF.f
src/phojet/PHO_PDFTST.f
src/phojet/PHO_PECMS.f
src/phojet/PHO_PHGAL.f
src/phojet/PHO_PMASS.f
src/phojet/PHO_PNAME.f
src/phojet/PHO_POLINT4F.f
src/phojet/PHO_POMCOR.f
src/phojet/PHO_POMSCA.f
src/phojet/PHO_POSPOM.f
src/phojet/PHO_PRBDIS.f
src/phojet/PHO_PRESEL.f
src/phojet/PHO_PREVNT.f
src/phojet/PHO_PRIMKT.f
src/phojet/PHO_PRSTRG.f
src/phojet/PHO_PTCUT.f
src/phojet/PHO_QELAST.f
src/phojet/PHO_QPMPDF.f
src/phojet/PHO_READPDS0.f
src/phojet/PHO_REGFLA.f
src/phojet/PHO_REGPAR.f
src/phojet/PHO_REJSTA.f
src/phojet/PHO_RNDBET.f
src/phojet/PHO_RNDGAM.f
src/phojet/PHO_RREGPAR.f
src/phojet/PHO_SAMASS.f
src/phojet/PHO_SAMP1D.f
src/phojet/PHO_SAMPRB.f
src/phojet/PHO_SAMPRO.f
src/phojet/PHO_SASANO.f
src/phojet/PHO_SASBEH.f
src/phojet/PHO_SASDIR.f
src/phojet/PHO_SASGAM.f
src/phojet/PHO_SASVMD.f
src/phojet/PHO_SCALES.f
src/phojet/PHO_SDECAY.f
src/phojet/PHO_SDECY2.f
src/phojet/PHO_SDECY3.f
src/phojet/PHO_SEAFLA.f
src/phojet/PHO_SELCOL.f
src/phojet/PHO_SELPT.f
src/phojet/PHO_SELSX2.f
src/phojet/PHO_SELSXI.f
src/phojet/PHO_SELSXR.f
src/phojet/PHO_SELSXS.f
src/phojet/PHO_SETMDL.f
src/phojet/PHO_SFECFE.f
src/phojet/PHO_SOFTPT.f
src/phojet/PHO_SOFTXX.f
src/phojet/PHO_SREGPAR.f
src/phojet/PHO_STDPAR.f
src/phojet/PHO_STRING.f
src/phojet/PHO_SWAPD.f
src/phojet/PHO_SWAPFLAV.f
src/phojet/PHO_SWAPI.f
src/phojet/PHO_TRACE.f
src/phojet/PHO_TRANI.f
src/phojet/PHO_TRANS.f
src/phojet/PHO_TRIREG.f
src/phojet/PHO_TRXPOM.f
src/phojet/PHO_VALFLA.f
src/phojet/PHO_VECRES.f
src/phojet/PHO_WGEPEM.f
src/phojet/PHO_XLAM.f
src/phojet/PHO_XSECT.f
src/phojet/PHVAL.f
src/phojet/PHO_SETPAR.f
src/phojet/PHO_SETPCOMB.f
src/phojet/PHO_SETPDF.f
src/phojet/PHO_STRFRA.f
src/phojet/PHO_SETCT14.f
  )

# DPMJET sources
set(DPMJET_SRCS
src/dpmjet/DPMINI.f
src/dpmjet/DPMOUT.f
src/dpmjet/DPMRUN.f
src/dpmjet/DT_AAEVT.f
src/dpmjet/DT_ABSORP.f
src/dpmjet/DT_BEAMPR.f
src/dpmjet/DT_BETREJ.f
src/dpmjet/DT_BLKD43.f
src/dpmjet/DT_BLKD46.f
src/dpmjet/DT_BLKD47.f
src/dpmjet/DT_CH2RES.f
src/dpmjet/DT_CHASTA.f
src/dpmjet/DT_CHKCEN.f
src/dpmjet/DT_CHKCSY.f
src/dpmjet/DT_CHKINE.f
src/dpmjet/DT_CKMT.f
src/dpmjet/DT_CKMTDE.f
src/dpmjet/DT_CKMTFF.f
src/dpmjet/DT_CKMTPR.f
src/dpmjet/DT_CKMTQ0.f
src/dpmjet/DT_CKMTX.f
src/dpmjet/DT_COM2CR.f
src/dpmjet/DT_CONUCL.f
src/dpmjet/DT_COORDI.f
src/dpmjet/DT_CQPAIR.f
src/dpmjet/DT_CROMSC.f
src/dpmjet/DT_CRONIN.f
src/dpmjet/DT_DALTRA.f
src/dpmjet/DT_DAMG.f
src/dpmjet/DT_DBETAR.f
src/dpmjet/DT_DBKLAS.f
src/dpmjet/DT_DBREAK.f
src/dpmjet/DT_DCALUM.f
src/dpmjet/DT_DCHANH.f
src/dpmjet/DT_DCHANT.f
src/dpmjet/DT_DDATAR.f
src/dpmjet/DT_DECAY1.f
src/dpmjet/DT_DECAYS.f
src/dpmjet/DT_DECPI0.f
src/dpmjet/DT_DEFAUL.f
src/dpmjet/DT_DEFSET.f
src/dpmjet/DT_DENSIT.f
src/dpmjet/DT_DENSITY.f
src/dpmjet/DT_DENTST.f
src/dpmjet/DT_DFERMI.f
src/dpmjet/DT_DGAMRN.f
src/dpmjet/DT_DHADDE.f
src/dpmjet/DT_DHADRI.f
src/dpmjet/DT_DIAGR.f
src/dpmjet/DT_DIFEVT.f
src/dpmjet/DT_DIFFKI.f
src/dpmjet/DT_DIFINI.f
src/dpmjet/DT_DIFPUT.f
src/dpmjet/DT_DIQBRK.f
src/dpmjet/DT_DPOLI.f
src/dpmjet/DT_DSFECF.f
src/dpmjet/DT_DSIGIN.f
src/dpmjet/DT_DSIGMA_DELTA.f
src/dpmjet/DT_DSQEL_Q2.f
src/dpmjet/DT_DTCHOI.f
src/dpmjet/DT_DTHREP.f
src/dpmjet/DT_DTRAFO.f
src/dpmjet/DT_DTUINI.f
src/dpmjet/DT_DTUOUT.f
src/dpmjet/DT_DTWOPA.f
src/dpmjet/DT_DTWOPD.f
src/dpmjet/DT_EBIND.f
src/dpmjet/DT_ELHAIN.f
src/dpmjet/DT_EMC1.f
src/dpmjet/DT_EMC2.f
src/dpmjet/DT_EVA2HE.f
src/dpmjet/DT_EVENTA.f
src/dpmjet/DT_EVENTB.f
src/dpmjet/DT_EVENTD.f
src/dpmjet/DT_EVTCHG.f
src/dpmjet/DT_EVTEMC.f
src/dpmjet/DT_EVTFLC.f
src/dpmjet/DT_EVTFRG.f
src/dpmjet/DT_EVTFRG2.f
src/dpmjet/DT_EVTHIS.f
src/dpmjet/DT_EVTINI.f
src/dpmjet/DT_EVTOUT.f
src/dpmjet/DT_EVTPLO.f
src/dpmjet/DT_EVTPUT.f
src/dpmjet/DT_EVTRES.f
src/dpmjet/DT_FER4M.f
src/dpmjet/DT_FICONF.f
src/dpmjet/DT_FILHGR.f
src/dpmjet/DT_FLAHAD.f
src/dpmjet/DT_FLUINI.f
src/dpmjet/DT_FOZOCA.f
src/dpmjet/DT_GEN_DELTA.f
src/dpmjet/DT_GEN_QEL.f
src/dpmjet/DT_GETBIN.f
src/dpmjet/DT_GETBXS.f
src/dpmjet/DT_GETCSY.f
src/dpmjet/DT_GETEMU.f
src/dpmjet/DT_GETPJE.f
src/dpmjet/DT_GETPTN.f
src/dpmjet/DT_GETSPT.f
src/dpmjet/DT_GLAUBE.f
src/dpmjet/DT_GLBINI.f
src/dpmjet/DT_GLBSET.f
src/dpmjet/DT_HADCOL.f
src/dpmjet/DT_HADPRP.f
src/dpmjet/DT_HADRIN.f
src/dpmjet/DT_HIMULT.f
src/dpmjet/DT_HISTAT.f
src/dpmjet/DT_HISTOG.f
src/dpmjet/DT_INDEXD.f
src/dpmjet/DT_ININUC.f
src/dpmjet/DT_INIT.f
src/dpmjet/DT_INITJS.f
src/dpmjet/DT_INUCAS.f
src/dpmjet/DT_JOIHIS.f
src/dpmjet/DT_JOIN.f
src/dpmjet/DT_JOIN2.f
src/dpmjet/DT_JOIN3.f
src/dpmjet/DT_JOIN33.f
src/dpmjet/DT_JOIN333.f
src/dpmjet/DT_JOIN34.f
src/dpmjet/DT_JOIN344.f
src/dpmjet/DT_JSPARA.f
src/dpmjet/DT_KKEVNT.f
src/dpmjet/DT_KKINC.f
src/dpmjet/DT_LAEVT.f
src/dpmjet/DT_LEPDCYP.f
src/dpmjet/DT_LM2RES.f
src/dpmjet/DT_LMKINE.f
src/dpmjet/DT_LT2LAB.f
src/dpmjet/DT_LT2LAO.f
src/dpmjet/DT_LTINI.f
src/dpmjet/DT_LTNUC.f
src/dpmjet/DT_LTRANS.f
src/dpmjet/DT_MASHEL.f
src/dpmjet/DT_MASS_INI.f
src/dpmjet/DT_MODB.f
src/dpmjet/DT_MYTRAN.f
src/dpmjet/DT_NCLPOT.f
src/dpmjet/DT_NEWHGR.f
src/dpmjet/DT_NONAME.f
src/dpmjet/DT_NUC2CM.f
src/dpmjet/DT_OUTHGR.f
src/dpmjet/DT_PDF0.f
src/dpmjet/DT_PHNSCH.f
src/dpmjet/DT_PHOINI.f
src/dpmjet/DT_PHOXS.f
src/dpmjet/DT_POILIK.f
src/dpmjet/DT_PREPOLA.f
src/dpmjet/DT_PROFBI.f
src/dpmjet/DT_QEL_POL.f
src/dpmjet/DT_QGAUS.f
src/dpmjet/DT_RACO.f
src/dpmjet/DT_RANNOR.f
src/dpmjet/DT_RESNCL.f
src/dpmjet/DT_RESPT.f
src/dpmjet/DT_RJSEAC.f
src/dpmjet/DT_RM2.f
src/dpmjet/DT_RNCLUS.f
src/dpmjet/DT_RNDM.f
src/dpmjet/DT_RNDMIN.f
src/dpmjet/DT_RNDMOU.f
src/dpmjet/DT_RNDMST.f
src/dpmjet/DT_RNDMTE.f
src/dpmjet/DT_RRM2.f
src/dpmjet/DT_RUNTT.f
src/dpmjet/DT_SAMPEX.f
src/dpmjet/DT_SAMPLW.f
src/dpmjet/DT_SAMPXB.f
src/dpmjet/DT_SAMSDQ.f
src/dpmjet/DT_SAMSQX.f
src/dpmjet/DT_SHNDIF.f
src/dpmjet/DT_SIHNAB.f
src/dpmjet/DT_SORT.f
src/dpmjet/DT_SORT1.f
src/dpmjet/DT_STTRAN.f
src/dpmjet/DT_TESTROT.f
src/dpmjet/DT_TESTXS.f
src/dpmjet/DT_USRHIS.f
src/dpmjet/DT_XIQBRK.f
src/dpmjet/DT_XOHISX.f
src/dpmjet/DT_XVENT.f
src/dpmjet/DT_YLAMB.f
src/dpmjet/DT_ZK.f
src/dpmjet/HKKHKT.f
src/dpmjet/IDT_IBJQUA.f
src/dpmjet/IDT_ICIHAD.f
src/dpmjet/IDT_IPDGHA.f
src/dpmjet/IDT_IQUARK.f
src/dpmjet/IDT_MCHAD.f
src/dpmjet/PHO_LHIST.f
src/dpmjet/PHO_RNDM.f
src/dpmjet/STRUCTP.f
src/dpmjet/openfile.f
src/dpmjet/DT_CSTRMA.f
src/dpmjet/DT_SAM2.f
src/dpmjet/DT_SANO.f
src/dpmjet/DT_SAPTRE.f
src/dpmjet/DT_SCN4BA.f
src/dpmjet/DT_SCN4CR.f
src/dpmjet/DT_SHFAST.f
src/dpmjet/DT_SHMAKI.f
src/dpmjet/DT_SIGEMU.f
src/dpmjet/DT_SIGGA.f
src/dpmjet/DT_SIGGAT.f
src/dpmjet/DT_SIGGP.f
src/dpmjet/DT_SIGTBL.f
src/dpmjet/DT_SIGVEL.f
src/dpmjet/DT_SIGVP.f
src/dpmjet/DT_SPLFLA.f
src/dpmjet/DT_SPLPTN.f
src/dpmjet/DT_SRPLOT.f
src/dpmjet/DT_STATIS.f
src/dpmjet/DT_SWPPHO.f
src/dpmjet/DT_TDIFF.f
src/dpmjet/DT_TITLE.f
src/dpmjet/DT_TSAMCS.f
src/dpmjet/DT_VV2SCH.f
src/dpmjet/DT_XGLOGY.f
src/dpmjet/DT_XGRAPH.f
src/dpmjet/DT_XHOINI.f
src/dpmjet/DT_XKSAMP.f
src/dpmjet/DT_XMHMD.f
src/dpmjet/DT_XMLMD.f
src/dpmjet/DT_XSGLAU.f
src/dpmjet/DT_XSHN.f
src/dpmjet/DT_XSTABL.f
src/dpmjet/DT_XTIME.f
src/dpmjet/DT_XVALHM.f
src/dpmjet/DT_XVENTB.f
src/dpmjet/FL_MODB.f
src/dpmjet/IDT_IB2PDG.f
src/dpmjet/IDT_IEFUND.f
src/dpmjet/IDT_IPDG2B.f
src/dpmjet/IDT_NPOISS.f
src/dpmjet/MGSQBS1.f
src/dpmjet/MGSQBS2.f
src/dpmjet/MUSQBS1.f
src/dpmjet/MUSQBS2.f
src/dpmjet/PDFSET.f
src/dpmjet/PHO_PHIST.f
src/dpmjet/PYR.f
src/dpmjet/STRUCTM.f
src/dpmjet/DT_SWPFSP.f
  )


# PYTHIA sources
set(PYTHIA_SRCS
src/pythia/fhhiggscorr.f
src/pythia/fhsetflags.f
src/pythia/fhsetpara.f
src/pythia/header.txt
src/pythia/py1ent.f
src/pythia/py2ent.f
src/pythia/py2frm.f
src/pythia/py3ent.f
src/pythia/py4ent.f
src/pythia/py4frm.f
src/pythia/py4jet.f
src/pythia/py4jts.f
src/pythia/py4jtw.f
src/pythia/py6frm.f
src/pythia/pyadsh.f
src/pythia/pyalem.f
src/pythia/pyalps.f
src/pythia/pyangl.f
src/pythia/pyapps.f
src/pythia/pybesq.f
src/pythia/pybksb.f
src/pythia/pyboei.f
src/pythia/pybook.f
src/pythia/pycba2.f
src/pythia/pycbal.f
src/pythia/pycdiv.f
src/pythia/pycell.f
src/pythia/pychge.f
src/pythia/pycjdc.f
src/pythia/pyckbd.f
src/pythia/pyclus.f
src/pythia/pycmq2.f
src/pythia/pycmqr.f
src/pythia/pycomp.f
src/pythia/pycrth.f
src/pythia/pycsrt.f
src/pythia/pyct5l.f
src/pythia/pyct5m.f
src/pythia/pycteq.f
src/pythia/pycttr.f
src/pythia/pydata.f
src/pythia/pydcyk.f
src/pythia/pydecy.f
src/pythia/pydiff.f
src/pythia/pydisg.f
src/pythia/pydocu.f
src/pythia/pydump.f
src/pythia/pyedit.f
src/pythia/pyeevt.f
src/pythia/pyeicg.f
src/pythia/pyeig4.f
src/pythia/pyerrm.f
src/pythia/pyevnt.f
src/pythia/pyevnw.f
src/pythia/pyevol.f
src/pythia/pyevwt.f
src/pythia/pyexec.f
src/pythia/pyfact.f
src/pythia/pyfcmp.f
src/pythia/pyfeyn.f
src/pythia/pyfill.f
src/pythia/pyfint.f
src/pythia/pyfisb.f
src/pythia/pyfowo.f
src/pythia/pyfram.f
src/pythia/pyfscr.f
src/pythia/pygaga.f
src/pythia/pygamm.f
src/pythia/pygano.f
src/pythia/pygau2.f
src/pythia/pygaus.f
src/pythia/pygbeh.f
src/pythia/pygdir.f
src/pythia/pygfxx.f
src/pythia/pyggam.f
src/pythia/pygive.f
src/pythia/pyglui.f
src/pythia/pygram.f
src/pythia/pygraw.f
src/pythia/pygrvd.f
src/pythia/pygrvl.f
src/pythia/pygrvm.f
src/pythia/pygrvs.f
src/pythia/pygrvv.f
src/pythia/pygrvw.f
src/pythia/pygvmd.f
src/pythia/pyh2xx.f
src/pythia/pyhepc.f
src/pythia/pyhext.f
src/pythia/pyhfth.f
src/pythia/pyhggm.f
src/pythia/pyhist.f
src/pythia/pyi3au.f
src/pythia/pyinbm.f
src/pythia/pyindf.f
src/pythia/pyinit.f
src/pythia/pyinki.f
src/pythia/pyinom.f
src/pythia/pyinpr.f
src/pythia/pyinre.f
src/pythia/pyjmas.f
src/pythia/pyjoin.f
src/pythia/pyjurf.f
src/pythia/pyk.f
src/pythia/pykcut.f
src/pythia/pykfdi.f
src/pythia/pykfin.f
src/pythia/pyklim.f
src/pythia/pykmap.f
src/pythia/pylamf.f
src/pythia/pyldcm.f
src/pythia/pylhef.f
src/pythia/pylist.f
src/pythia/pylogo.f
src/pythia/pymael.f
src/pythia/pymass.f
src/pythia/pymaxi.f
src/pythia/pymemx.f
src/pythia/pymewt.f
src/pythia/pymign.f
src/pythia/pymihg.f
src/pythia/pymihk.f
src/pythia/pymirm.f
src/pythia/pymrun.f
src/pythia/pymsin.f
src/pythia/pymult.f
src/pythia/pyname.f
src/pythia/pynjdc.f
src/pythia/pynmes.f
src/pythia/pynull.f
src/pythia/pyofsh.f
src/pythia/pyonia.f
src/pythia/pyonof.f
src/pythia/pyoper.f
src/pythia/pyp.f
src/pythia/pypcmp.f
src/pythia/pypdel.f
src/pythia/pypdfl.f
src/pythia/pypdfu.f
src/pythia/pypdga.f
src/pythia/pypdpi.f
src/pythia/pypdpo.f
src/pythia/pypdpr.f
src/pythia/pypile.f
src/pythia/pyplot.f
src/pythia/pypole.f
src/pythia/pyprep.f
src/pythia/pyptdi.f
src/pythia/pyptfs.f
src/pythia/pyptis.f
src/pythia/pyptmi.f
src/pythia/pyqqbh.f
src/pythia/pyradk.f
src/pythia/pyrand.f
src/pythia/pyreco.f
src/pythia/pyremn.f
src/pythia/pyresd.f
src/pythia/pyrget.f
src/pythia/pyrghm.f
src/pythia/pyrnm3.f
src/pythia/pyrnmq.f
src/pythia/pyrobo.f
src/pythia/pyrset.f
src/pythia/pyrvch.f
src/pythia/pyrvg1.f
src/pythia/pyrvg2.f
src/pythia/pyrvg3.f
src/pythia/pyrvg4.f
src/pythia/pyrvgl.f
src/pythia/pyrvgw.f
src/pythia/pyrvi1.f
src/pythia/pyrvi2.f
src/pythia/pyrvi3.f
src/pythia/pyrvne.f
src/pythia/pyrvr.f
src/pythia/pyrvs.f
src/pythia/pyrvsb.f
src/pythia/pyrvsf.f
src/pythia/pysave.f
src/pythia/pyscat.f
src/pythia/pysfdc.f
src/pythia/pysgex.f
src/pythia/pysghf.f
src/pythia/pysghg.f
src/pythia/pysgqc.f
src/pythia/pysgsu.f
src/pythia/pysgtc.f
src/pythia/pysgwz.f
src/pythia/pyshow.f
src/pythia/pysigh.f
src/pythia/pysimp.f
src/pythia/pyslha.f
src/pythia/pyspen.f
src/pythia/pysphe.f
src/pythia/pyspli.f
src/pythia/pysspa.f
src/pythia/pystat.f
src/pythia/pystbh.f
src/pythia/pystop.f
src/pythia/pystrf.f
src/pythia/pysubh.f
src/pythia/pysugi.f
src/pythia/pytabu.f
src/pythia/pytaud.f
src/pythia/pytbbc.f
src/pythia/pytbbn.f
src/pythia/pytbdy.f
src/pythia/pytbhb.f
src/pythia/pytbhg.f
src/pythia/pytbhq.f
src/pythia/pytbhs.f
src/pythia/pytecm.f
src/pythia/pytest.f
src/pythia/pythag.f
src/pythia/pythrg.f
src/pythia/pythru.f
src/pythia/pytime.f
src/pythia/pytune.f
src/pythia/pyuedc.f
src/pythia/pyupda.f
src/pythia/pyupev.f
src/pythia/pyupin.f
src/pythia/pyupre.f
src/pythia/pyveto.f
src/pythia/pywaux.f
src/pythia/pywdkk.f
src/pythia/pywidt.f
src/pythia/pywidx.f
src/pythia/pyx2xg.f
src/pythia/pyx2xh.f
src/pythia/pyx3jt.f
src/pythia/pyx4jt.f
src/pythia/pyxdif.f
src/pythia/pyxdin.f
src/pythia/pyxjet.f
src/pythia/pyxkfl.f
src/pythia/pyxtee.f
src/pythia/pyxtot.f
src/pythia/pyxued.f
src/pythia/pyxxga.f
src/pythia/pyxxz6.f
src/pythia/pyzdis.f
src/pythia/ssmssm.f
src/pythia/sugra.f
src/pythia/upevnt.f
src/pythia/upinit.f
src/pythia/upveto.f
src/pythia/xpyr.f
  )

# DUMMY sources
set(DUMMY_SRCS
  common/dummies.f
  )

# All Fortran sources
set(FSRCS ${PHOJET_SRCS} ${DPMJET_SRCS} ${PYTHIA_SRCS} ${DUMMY_SRCS})

# Add a library to the project using the specified source files
add_library(${PROJECT_NAME} SHARED ${FSRCS})

target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC
  include/phojet
  include/dpmjet
  include/flinclude
  include/pythia
  include/common
  )

# System dependent: Modify the way the library is build
if(${CMAKE_SYSTEM} MATCHES Darwin)
    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -undefined dynamic_lookup")
endif(${CMAKE_SYSTEM} MATCHES Darwin)

# Add executable
add_executable(dpmjet.exe src/exe/DPMJET.f)
target_include_directories(dpmjet.exe SYSTEM PUBLIC
  include/dpmjet
  )
target_link_libraries(dpmjet.exe ${PROJECT_NAME})
# Installation
install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib)

# Install headers, data files and documentation
install(DIRECTORY include DESTINATION .)
install(DIRECTORY dpmdata DESTINATION .)
install(DIRECTORY docs DESTINATION .)

# Install the executable
install(TARGETS dpmjet.exe RUNTIME DESTINATION bin)
